cycles hair (curve segments) problem #38304

Closed
opened 2014-01-21 17:22:10 +01:00 by Ronny G · 14 comments

System Information
Operating system and graphics card

Blender Version
Broken: 2.69 an up

Short description of error

particle hair (curve segments) with children (simple/interpolated) and length < 100% produces black "artefacts"

Exact steps for others to reproduce the error

see blend file for details

  1. add hair particle system
  2. turn on children simple or interpolated
  3. change the length with vertex group or random option
  4. change hair primitive -> curve segments
  5. adjust root and tip (cycles hair settings) if necessary
  6. render :)

hair_cull_on.png
hair_cull_off.png
hair_prob.png
particle_black1.blend

**System Information** Operating system and graphics card **Blender Version** Broken: 2.69 an up **Short description of error** particle hair (curve segments) with children (simple/interpolated) and length < 100% produces black "artefacts" **Exact steps for others to reproduce the error** see blend file for details 1. add hair particle system 2. turn on children simple or interpolated 3. change the length with vertex group or random option 4. change hair primitive -> curve segments 5. adjust root and tip (cycles hair settings) if necessary 6. render :) ![hair_cull_on.png](https://archive.blender.org/developer/F71101/hair_cull_on.png) ![hair_cull_off.png](https://archive.blender.org/developer/F71102/hair_cull_off.png) ![hair_prob.png](https://archive.blender.org/developer/F71109/hair_prob.png) [particle_black1.blend](https://archive.blender.org/developer/F71105/particle_black1.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @nudelZ

Added subscriber: @nudelZ
Member

Added subscriber: @Lockal

Added subscriber: @Lockal
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

Note for devs:
bvh_curve_refine is a source of NaNs, at least one comes from:

float3 tg = normalize_len(float4_to_float3(P2 - P1), &l);

when P2 - P1 => {0,0,0}; len({0,0,0}) => 0; {0,0,0}/0 => NaN.

This file probably demonstrates 2 different bugs: bad shading along the hair, when "Cull back faces" is disabled, and black dots on the tip of each hair.

NaNs were the reason, why I reverted b886c26d1f. Once hair functions generate bad normals, these nans may appear inside bvh_intersect_hair, where NaNs are no-candidate values for SSE functions (e. g. SSE min and max always return normal float values, if any). SSE code did not produce bad rays, it only exposed more generic problem.

Note for devs: `bvh_curve_refine` is a source of NaNs, at least one comes from: ``` float3 tg = normalize_len(float4_to_float3(P2 - P1), &l); ``` when [P2](https://archive.blender.org/developer/P2.txt) - [P1](https://archive.blender.org/developer/P1.txt) => {0,0,0}; len({0,0,0}) => 0; {0,0,0}/0 => NaN. This file probably demonstrates 2 different bugs: bad shading along the hair, when "Cull back faces" is disabled, and black dots on the tip of each hair. NaNs were the reason, why I reverted b886c26d1f70d512b4f68975142372e3bee81c89. Once hair functions generate bad normals, these nans may appear inside bvh_intersect_hair, where NaNs are no-candidate values for SSE functions (e. g. SSE min and max always return normal float values, if any). SSE code did not produce bad rays, it only exposed more generic problem.

Added subscriber: @Sergey

Added subscriber: @Sergey

@brecht, @Lockal, anyone of you is looking into the issue? Would like to have all bugs which are being looked into to be assigned :)

@brecht, @Lockal, anyone of you is looking into the issue? Would like to have all bugs which are being looked into to be assigned :)

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Would be really nice to fix this, so we can also re-enable the SSE optimizations here again.

Would be really nice to fix this, so we can also re-enable the SSE optimizations here again.
Member

@brecht, can you look at this? I'm not very confident in raytracing. One thing I can say is that nan's behavior depends on compiler. max(1.0, NaN) can return either NaN or 1.0, depending on how compiler allocates registers. GCC mostly eliminates nans in kernel_bvh_traversal.h (both in ray->P and ray->D), but MSVC exposes them. When ray has NaNs, msvc renders transparent pixels. That's how Koro's alpha map looks in GCC:
linalpha.png
And that's how it looks with msvc 11:
alpha.png

@brecht, can you look at this? I'm not very confident in raytracing. One thing I can say is that nan's behavior depends on compiler. max(1.0, NaN) can return either NaN or 1.0, depending on how compiler allocates registers. GCC mostly eliminates nans in kernel_bvh_traversal.h (both in ray->P and ray->D), but MSVC exposes them. When ray has NaNs, msvc renders transparent pixels. That's how Koro's alpha map looks in GCC: ![linalpha.png](https://archive.blender.org/developer/F76377/linalpha.png) And that's how it looks with msvc 11: ![alpha.png](https://archive.blender.org/developer/F76379/alpha.png)

I fixed the problem in this file now, see {a0c54d71d8a432e85fbcd9b01d05a52dee2659c3}.

I'm not sure that covers the entire issue, I didn't test with visual studio yet.

I fixed the problem in this file now, see {a0c54d71d8a432e85fbcd9b01d05a52dee2659c3}. I'm not sure that covers the entire issue, I didn't test with visual studio yet.

Render of the attached file is fine in 3D View (Perspective Mode). Tested with a VC2008 x64 build.

Orographic mode still has some black artefacts, but that was already in 2.69.

Render of the attached file is fine in 3D View (Perspective Mode). Tested with a VC2008 x64 build. Orographic mode still has some black artefacts, but that was already in 2.69.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2014-02-11 18:53:14 +01:00

Tested with Visual Studio 2013 and see to work fine. I committed b886c26d1f since that seems to work again.

Tested with Visual Studio 2013 and see to work fine. I committed b886c26d1f70d512b4f68975142372e3bee81c89 since that seems to work again.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38304
No description provided.