Fix part of T38304: cycles render problem with zero length curve segments.

Now these are removed from the curve.